# ButterRobot

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_app.py
.github/workflows/: test.yml
app/: app.py  calendar_helper.py  piaware_poller.py  proxy.py  test_app.py  test_calendar_helper.py  test_piaware_poller.py
deploy/: calendar-helper.env.example  piaware-poller.env.example  piaware-poller.service
workspace/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
workspace/skills/briefing/: SKILL.md
workspace/skills/calendar/: SKILL.md
workspace/skills/gitlab/: SKILL.md
workspace/skills/manager/: SKILL.md
workspace/skills/piaware/: SKILL.md
workspace/state/: piaware-focus.json
