[project]
name = "butterrobot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
    "taskipy",
]

[tool.taskipy.tasks]
lint = "ruff check"
lint_fix = "ruff check --fix"
format = "ruff format"
typecheck = "ty check"
test = "pytest"
test_cov = "pytest --cov=app --cov-report=term-missing"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]

[tool.ruff]
target-version = "py311"
